fix: position header at top most to prevent gap at the top of the page

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -4,6 +4,8 @@
 
 .header {
   position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
